--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "879160bb-2efd-4837-9d80-7b6fff7bf698"
 authors = ["Dylan Festa"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1.3.1"
 
