--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+StaticArrays = "1.0"
+Roots = "1.0"
 julia = "1.3.1"
 
 [extras]
